--- a/config/appcelerator.config
+++ b/config/appcelerator.config
@@ -1,7 +1,7 @@
 --- 
 :aid: b912fcf0-a467-012b-8b16-002332ca2ee4
 :service: titanium
-:name: player
+:name: playtanium
 :service_version: 3.0.0
 :paths: 
   :tmp: tmp
